@@ -1,3 +1,7 @@
+2019-05-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/testSimpleTests.R: Converted from tests/simpleTests.R
+
 2019-05-28  Dirk Eddelbuettel  <edd@debian.org>
 
         * tests/tinytest.R: New test driver using tinytest
